sidebar bug fixing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -82,3 +82,68 @@ input[type=text], input[type=password] {
 button:hover {
   opacity: 0.8;
 }
+
+.menu-bars{
+  margin-left: 2rem;
+  font-size: 2rem;
+  background: none;
+}
+
+.nav-menu{
+  background-color: #7bff00;
+  width: 250px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  transition: 850ms;
+}
+
+.nav-menu.active{
+  left: 0;
+  transition: 350ms;
+}
+
+.nav-text{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 8px 0px 8px 16px;
+  list-style: none;
+  height: 60px;
+}
+
+.nav-text a{
+  text-decoration: none;
+  color: #f1356d;
+  font-size: 18px;
+  width: 30%;
+  height: 70%;
+  display: flex;
+  align-items: center;
+  padding: 0 5px;
+  border-radius: 1px;
+}
+
+.nav-text a:hover{
+  background-color: #fc275c;
+}
+
+.nav-menu-items{
+  width: 100%;
+}
+
+.navbar-toggle{
+  background-color: #fc275c;
+  width: 50%;
+  height: 80px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+span{
+  margin-left: 16px;
+}
