--- a/client/src/App.css
+++ b/client/src/App.css
@@ -90,7 +90,7 @@ button:hover {
 }
 
 .nav-menu{
-  background-color: #7bff00;
+  background-color: #a8a4a4;
   width: 250px;
   height: 100vh;
   display: flex;
@@ -108,6 +108,7 @@ button:hover {
 
 .nav-text{
   display: flex;
+  color: #ffffff;
   justify-content: start;
   align-items: center;
   padding: 8px 0px 8px 16px;
@@ -119,7 +120,7 @@ button:hover {
   text-decoration: none;
   color: #f1356d;
   font-size: 18px;
-  width: 30%;
+  width: 100%;
   height: 70%;
   display: flex;
   align-items: center;
@@ -136,9 +137,9 @@ button:hover {
 }
 
 .navbar-toggle{
-  background-color: #fc275c;
-  width: 50%;
-  height: 80px;
+  
+  width: -100%;
+  height: 100px;
   display: flex;
   justify-content: start;
   align-items: center;
