Created Dashboard homepage, still needs editing!

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -148,3 +148,9 @@ button:hover {
 span{
   margin-left: 16px;
 }
+
+.chart-wrap{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
